tests/should_fail/terminates/trait_impl_where.stderr
error: Mutually recursive functions: when calling `<i32 as Tr>::f`...
  --> trait_impl_where.rs:19:5
   |
19 | /     fn f(&self)
20 | |     where
21 | |         i32: Tr,
   | |________________^
   |
note: then `<i32 as Tr>::f` uses the impl `<i32 as Tr>` via the call to `<i32 as Tr>::f`...
  --> trait_impl_where.rs:23:9
   |
23 |         self.f()
   |         ^^^^^^^^
note: finally the method `<i32 as Tr>::f` might be called
  --> trait_impl_where.rs:19:5
   |
19 | /     fn f(&self)
20 | |     where
21 | |         i32: Tr,
   | |________________^

error: aborting due to 1 previous error

